--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ name: PRD's website
 description: Educates people about the current affairs of the world
 github_username: PrdEduPol
 author: EduPol
+theme: cayman
