--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ name: PRD's website
 description: Educates people about the current affairs of the world
 github_username: PrdEduPol
 author: EduPol
-theme: minima
+// theme: minima
+remote-theme: just-the-docs/just-the-docs
