--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,6 @@ description: Educates people about the current affairs of the world
 github_username: PrdEduPol
 author: EduPol
 
+markdown: kramdown
+
 remote_theme: just-the-docs/just-the-docs
